--- a/Learning Python.ipynb
+++ b/Learning Python.ipynb
@@ -143,6 +143,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists\n",
+    "Lists are like arrays, they can store any type of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'three']\n",
+      "1\n",
+      "2\n",
+      "three\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = []\n",
+    "mylist.append(1)\n",
+    "mylist.append(2)\n",
+    "mylist.append(\"three\")\n",
+    "print(mylist)\n",
+    "for x in mylist:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mathematical Operators\n",
+    "As expected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 1+2*3/4\n",
+    "print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remainder is found using th % operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(12%5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Square uses \\*\\* operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2**8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can multiply strings as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! HelloWorld! \n"
+     ]
+    }
+   ],
+   "source": [
+    "mystr = \"HelloWorld! \"\n",
+    "print(mystr*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists can be appended using the + operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myfirstlist = [1,2,3]\n",
+    "mysecondlist = [4,5,6]\n",
+    "mycompletelist = myfirstlist + mysecondlist\n",
+    "print(mycompletelist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists can also be duplicated like strings using the * operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = [1,2,3]\n",
+    "print(mylist*3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String Formatting\n",
+    "using %(CHAR) you can place a variable inside another string:\n",
+    "- %s = str\n",
+    "- %d = int\n",
+    "- %f = float\n",
+    "- %x = int in hex format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, Leeroy!\n",
+      "Leeroy, your age is 23.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Leeroy\"\n",
+    "print (\"hello, %s!\" % name)\n",
+    "age = 23\n",
+    "print (\"%s, your age is %d.\" % (name, age))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
